# cork-mcp

./: .editorconfig  .gitignore  .prettierignore  ARCHITECTURE.md  Dockerfile  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
artifacts/safe/susds-susde-liquidity-impairment/: 01-schedule.json  02-execute.json  manifest.json
contracts/oracle/: .gitignore  README.md  foundry.toml
contracts/oracle/src/: IRateOracle.sol  SUsdePerSUsdsRateOracle.sol
contracts/oracle/src/interfaces/: IAggregatorV3.sol  ISUsdePerSUsdsRateOracle.sol
contracts/oracle/src/libraries/: FullMath.sol
contracts/oracle/test/: ModuleFoundation.t.sol  SUsdePerSUsdsRateOracle.t.sol
contracts/oracle/test/mocks/: MockAggregatorV3.sol
crates/signing-gate/: Cargo.toml  README.md
crates/signing-gate/policy-schemas/: policy-generation.schema.json
crates/signing-gate/src/: gate.rs  lib.rs  policy.rs
crates/signing-gate/tests/: vectors.rs
docs/: integration.md  local-development.md  operators.md  security.md  traceability-and-readiness.md
examples/: client.ts
operations/runbooks/: emergency-disable.md  release.md
tools/fork/: foundry.toml
tools/fork/test/: LiveMarketMint.t.sol
