[package]
name = "cork-signing-gate"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false

[lib]
name = "cork_signing_gate"
crate-type = ["rlib", "cdylib"]

[features]
default = []
wasm = ["dep:wasm-bindgen"]

[dependencies]
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["std"] }
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_jcs = "0.1.0"
serde_json = "1.0.140"
sha2 = "0.10.9"
sha3 = "0.10.8"
wasm-bindgen = { version = "0.2.100", optional = true }
